--- a/mobile/src/main/res/layout/cardview_message.xml
+++ b/mobile/src/main/res/layout/cardview_message.xml
@@ -24,6 +24,12 @@
             android:layout_height="wrap_content"
             android:textStyle="italic" />
 
+        <LinearLayout
+            android:id="@+id/tv_emoticons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
